--- a/views/base.jade
+++ b/views/base.jade
@@ -8,6 +8,16 @@ html(lang="en")
 		link(rel='stylesheet', href='static/stylesheets/alertify.core.css')
 		link(rel='stylesheet', href='static/stylesheets/alertify.default.css')
 		link(rel='stylesheet', href='static/stylesheets/style.css')
+
+		script(type='text/javascript')
+			| (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			| (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			| m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			| })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			| ga('create', 'UA-44477908-2', 'connect4.bumjung.com');
+			| ga('send', 'pageview');
+
 	body
 		.navbar.navbar-default.navbar-fixed-top(role='navigation')
 			.content
