--- a/views/main.jade
+++ b/views/main.jade
@@ -7,6 +7,10 @@ block content
 				.p1-score
 					i(class="fa fa-trophy") &nbsp;
 					span 0
+				.clear
+				.p1-status.online
+					i(class="fa fa-circle")
+					span &nbsp;Connected
 
 			#board.col-md-6
 				table.center-table
@@ -19,3 +23,7 @@ block content
 				.p2-score
 					i(class="fa fa-trophy") &nbsp;
 					span 0
+				.clear
+				.p2-status(style="float:left")
+					i(class="fa fa-circle")
+					span &nbsp;OFFLINE
