--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -204,3 +204,29 @@ code {
 a, h1{
   letter-spacing: 1px;
 }
+
+#content{
+  width:100%;
+  height:350px;
+  margin: 0 0 20px 0;
+  border: solid 1px #999;
+  overflow-y: scroll;
+  padding:10px;
+}
+
+.field, #content{
+  border:2px solid #ecf0f1;
+}
+.field{
+  width:100%;
+  height:50px;
+  margin-bottom:20px;
+}
+.send{
+   border:none;
+   margin-top:0;
+   width:100px;
+   padding:3px;
+   float:right;
+   font-size:20px;
+}
