--- a/views/main.jade
+++ b/views/main.jade
@@ -3,7 +3,7 @@ extends base
 block content
 	.container(id="main-content")
 		.row
-			.col-md-3
+			.col-md-2
 				.p1-score
 					i(class="fa fa-trophy") &nbsp;
 					span 0
@@ -12,14 +12,14 @@ block content
 					i(class="fa fa-circle")
 					span &nbsp;Connected
 
-			#board.col-md-6
+			#board.col-md-5
 				table.center-table
 				.form-group(id="room-url")
 					label(for="shareUrl").col-md-3.control-label.share-label Share URL:
 					.col-md-7
 						input(style="display:inline-block;" type='text', data-room=share, name='shareUrl', value=shareURL ReadOnly).form-control
 						i(id="help" rel="tooltip" class="fa fa-question-circle" data-toggle="tooltip" data-placement="right" title="Copy the link to your friend !")
-			.col-md-3
+			.col-md-2
 				.p2-score
 					i(class="fa fa-trophy") &nbsp;
 					span 0
@@ -27,3 +27,9 @@ block content
 				.p2-status(style="float:left")
 					i(class="fa fa-circle")
 					span &nbsp;OFFLINE
+			.col-md-3
+				.controls
+					#content
+					input.field(type="text")
+					input.button.send(type='button', value='Send')
+					
