--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -74,7 +74,7 @@ code {
   margin-top:30px;
 }
 .share-label {
-  line-height: 34px;
+  line-height: 37px;
   text-align: right;
 }
 
@@ -135,15 +135,17 @@ code {
   margin-bottom:20px;
 }
 
-.form-group i{
-  top:6px;
+a#copy-clipboard{
+  bottom:2px;
   position:absolute;
   display:inline-block;
   float:right;
   margin-left:10px;
-  font-size:20px;
+  font-size:15px;
   color:#1abc9c;
+  cursor:pointer;
 }
+
 .index{
   margin-top:-30px;
 }
