--- a/views/base.jade
+++ b/views/base.jade
@@ -49,9 +49,10 @@ html(lang="en")
 					a(href="http://bumjung.com") Paul Kim
 					span(style="float:right;") Released on 04.12.14
 		block javascript
-		script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
-		script(src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
-		script(src='/socket.io/socket.io.js')
-		script(src='static/javascript/frontend.js')
-		script(src='static/javascript/alertify.min.js')
+		script(type="text/javascript" src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
+		script(type="text/javascript" src='/socket.io/socket.io.js')
+		script(type="text/javascript" src="static/javascript/jquery.zclip.min.js")
+		script(type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
+		script(type="text/javascript" src='static/javascript/alertify.min.js')
+		script(type="text/javascript" src='static/javascript/frontend.js')
 
