--- a/views/base.jade
+++ b/views/base.jade
@@ -51,7 +51,7 @@ html(lang="en")
 		block javascript
 		script(type="text/javascript" src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
 		script(type="text/javascript" src='/socket.io/socket.io.js')
-		script(type="text/javascript" src="static/javascript/jquery.zclip.min.js")
+		script(type="text/javascript" src="static/javascript/ZeroClipboard.min.js")
 		script(type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
 		script(type="text/javascript" src='static/javascript/alertify.min.js')
 		script(type="text/javascript" src='static/javascript/frontend.js')
