--- a/views/base.jade
+++ b/views/base.jade
@@ -9,6 +9,7 @@ html(lang="en")
 		link(rel='stylesheet', href='static/stylesheets/alertify.default.css')
 		link(rel='stylesheet', href='static/stylesheets/style.css')
 
+		meta(property="og:image" content="http://connect4.bumjung.com/static/preview.png")
 		script(type='text/javascript')
 			| (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			| (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -47,6 +48,7 @@ html(lang="en")
 				p.text-muted(style="color:#fff; font-size:12px; letter-spacing:1px;")
 					| Developed by 
 					a(href="http://bumjung.com") Paul Kim
+					span(style="color:#ecf0f1; font-size:11px; margin-left:5px;") using Node.js, Socket.io, Express, Jade
 					span(style="float:right;") Released on 04.12.14
 		block javascript
 		script(type="text/javascript" src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
