--- a/views/base.jade
+++ b/views/base.jade
@@ -3,13 +3,16 @@ doctype html
 html(lang="en")
 	head
 		title Connect4
+		meta(property="og:site_name" content="Connect4")
+		meta(property="og:image" content="http://connect4.bumjung.com/static/preview.png")
+		meta(name="description" content="Play Connect4 with your friends!")
+		meta(name="viewport" content="width=device-width, initial-scale=1.0")
 		link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
 		link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css')
 		link(rel='stylesheet', href='static/stylesheets/alertify.core.css')
 		link(rel='stylesheet', href='static/stylesheets/alertify.default.css')
 		link(rel='stylesheet', href='static/stylesheets/style.css')
 
-		meta(property="og:image" content="http://connect4.bumjung.com/static/preview.png")
 		script(type='text/javascript')
 			| (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			| (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
