meta url change to heroku

--- a/views/base.jade
+++ b/views/base.jade
@@ -4,7 +4,7 @@ html(lang="en")
 	head
 		title Connect4
 		meta(property="og:site_name" content="Connect4")
-		meta(property="og:image" content="static/preview.png")
+		meta(property="og:image" content="http://bums-connect4.herokuapp.com/static/preview.png")
 		meta(name="description" content="Play Connect4 with your friends!")
 		meta(name="viewport" content="width=device-width, initial-scale=1.0")
 		link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
