added favicon, meta og:image url changed

--- a/views/base.jade
+++ b/views/base.jade
@@ -4,9 +4,10 @@ html(lang="en")
 	head
 		title Connect4
 		meta(property="og:site_name" content="Connect4")
-		meta(property="og:image" content="http://bums-connect4.herokuapp.com/static/preview.png")
+		meta(property="og:image" content="http://bumjung.com/content/media/images/preview.png")
 		meta(name="description" content="Play Connect4 with your friends!")
 		meta(name="viewport" content="width=device-width, initial-scale=1.0")
+		link(rel="icon" href="http://bumjung.com/content/media/images/icon.png" type="image/x-icon")
 		link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
 		link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css')
 		link(rel='stylesheet', href='static/stylesheets/alertify.core.css')
