added tooltip to hint about 'Enter' to send message

--- a/views/main.jade
+++ b/views/main.jade
@@ -40,5 +40,5 @@ block content
 				.controls
 					#content
 					input.field(type="text")
-					input.button.send(type='button', value='Send')
+					input.button.send(id="send_message" type='button', value='Send' rel="tooltip" data-toggle="tooltip-button" title="You can also send messages by clicking 'Enter' !")
 					
