--- a/views/index.jade
+++ b/views/index.jade
@@ -12,5 +12,9 @@ block texts
 				i(class="fa fa-circle" style="color:#e74c3c;")
 				|&nbsp;
 				i(class="fa fa-circle" style="color:#f1c40f;")
-		a(href="/room")
-			.button Create a room
+		.button-container
+			a(href="/room")
+				.button.button-index(style="margin-right:5px;") Create a room
+			a(href="/room-tour")
+				.button.button-index(style="margin-left:5px;") Give me a tour!
+
