--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -165,6 +165,9 @@ span#help{
 .index{
   margin-top:-30px;
 }
+.button-container{
+  margin:0 auto;
+}
 .button{
   position:relative;
   background-color:#1abc9c;
@@ -177,6 +180,10 @@ span#help{
   transition: background-color 0.2s;
   font-size:20px;
   border-radius: 10px;
+}
+.button-index{
+  display:inline-block;
+  width:230px;
 }
 .index h1{
   font-size:60px;
@@ -205,6 +212,9 @@ span#help{
   text-align:center;
   width:126px;
   float:right;
+  -moz-box-sizing:border-box;
+  -webkit-box-sizing:border-box;
+  box-sizing:border-box;
 }
 .p1-status i, .p2-status i{
   color:#eb6b56;
